[package]
name = "deluge-torrent-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "deluge-torrent-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.2.0", features = ["server", "transport-io", "server-side-http", "schemars"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
bytes = "1"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
anyhow = "1"
sha2 = "0.10"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
