[package]
name = "deluge-torrent-mcp"
version = "0.4.8"
edition = "2021"
license = "MIT"
authors = ["Sandy McArthur, Jr."]

[[bin]]
name = "deluge-torrent-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.2.0", features = ["server", "transport-io", "transport-streamable-http-server", "schemars"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
native-tls = "0.2"
tokio-native-tls = "0.3"
bytes = "1"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
bendy = "0.6"
anyhow = "1"
sha2 = "0.10"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
rand = "0.10"
form_urlencoded = "1"
